gospel/tests/negative/t1.mli

(*@ axiom a1: 1 *)

(* ERROR: axiom should be a formula *)
